--- a/DotNet.Bentley/AddInManager/AddinManager (V8i)/View/MainAddinManager.xaml
+++ b/DotNet.Bentley/AddInManager/AddinManager (V8i)/View/MainAddinManager.xaml
@@ -3,19 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:AddinManager.View"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:vp="clr-namespace:DotNet.MVVM.ViewHelper;assembly=DotNet.MVVM"
+             xmlns:vp="clr-namespace:AddinManager.MVVM"
+             xmlns:local="clr-namespace:AddinManager.View"
              mc:Ignorable="d" 
-             Height="320" Width="420" Title="AddIn Manager" >
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Loaded">
-            <vp:EventCommandHelper Command="{Binding LoadedEvent}"></vp:EventCommandHelper>
-        </i:EventTrigger>
-        <i:EventTrigger EventName="Closed">
-            <vp:EventCommandHelper Command="{Binding ClosedEvent}"></vp:EventCommandHelper>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
+             Height="320" Width="420" Closed="OnClosed" Loaded="OnLoaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
