--- a/DotNet.Bentley/AddInManager/AddinManager (CE)/View/MainAddinManager.xaml
+++ b/DotNet.Bentley/AddInManager/AddinManager (CE)/View/MainAddinManager.xaml
@@ -7,13 +7,13 @@
              xmlns:vp="clr-namespace:AddinManager.MVVM"
              xmlns:local="clr-namespace:AddinManager.View"
              mc:Ignorable="d" 
-             Height="320" Width="420" Closed="OnClosed" Loaded="OnLoaded">
+             Height="300" Width="380" Closed="OnClosed" Loaded="OnLoaded" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="36"/>
         </Grid.RowDefinitions>
-        <GroupBox Margin="2,1">
+        <GroupBox Margin="1,1">
             <TreeView  BorderThickness="0" ItemsSource="{Binding Models}">
                 <TreeView.ItemContainerStyle>
                     <Style TargetType="{x:Type TreeViewItem}">
@@ -32,11 +32,10 @@
                 </i:Interaction.Behaviors>
             </TreeView>
         </GroupBox>
-        <Separator Grid.Row="1" Margin="0,3,0,0" VerticalAlignment="Top"></Separator>
-        <Button Grid.Row="1" Command="{Binding Remove}" HorizontalAlignment="Left" Width="100" Height="32" VerticalAlignment="Center" Margin="5,5,0,0" Content="Remove"></Button>
+        <Button Grid.Row="1" Command="{Binding Remove}" HorizontalAlignment="Left" Width="100" Height="32" VerticalAlignment="Center" Margin="2,0,0,0" Content="Remove"></Button>
         <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center">
-            <Button Command="{Binding Load}" Margin="0,5,5,0" Width="100" Height="32" Content="Load"></Button>
-            <Button Command="{Binding Run}" Margin="0,5,5,0" Width="100" Height="32" Content="Run"></Button>
+            <Button Command="{Binding Load}" Margin="0,0,2,0" Width="100" Height="32" Content="Load"></Button>
+            <Button Command="{Binding Run}" Margin="0,0,2,0" Width="100" Height="32" Content="Run"></Button>
         </StackPanel>
     </Grid>
 </Window>
