--- a/DotNet.Bentley/AddInManager/AddinManager (V8i)/View/MainAddinManager.xaml
+++ b/DotNet.Bentley/AddInManager/AddinManager (V8i)/View/MainAddinManager.xaml
@@ -7,11 +7,11 @@
              xmlns:vp="clr-namespace:AddinManager.MVVM"
              xmlns:local="clr-namespace:AddinManager.View"
              mc:Ignorable="d" 
-             Height="320" Width="420" Closed="OnClosed" Loaded="OnLoaded">
+             Height="300" Width="380" Closed="OnClosed" Loaded="OnLoaded" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="36"/>
         </Grid.RowDefinitions>
         <GroupBox Margin="2,1">
             <TreeView  BorderThickness="0" ItemsSource="{Binding Models}">
@@ -33,10 +33,10 @@
             </TreeView>
         </GroupBox>
         <Separator Grid.Row="1" Margin="0,3,0,0" VerticalAlignment="Top"></Separator>
-        <Button Grid.Row="1" Command="{Binding Remove}" HorizontalAlignment="Left" Width="100" Height="32" VerticalAlignment="Center" Margin="5,5,0,0" Content="Remove"></Button>
+        <Button Grid.Row="1" Command="{Binding Remove}" HorizontalAlignment="Left" Width="100" Height="32" VerticalAlignment="Center" Margin="2,0,0,0" Content="Remove"></Button>
         <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center">
-            <Button Command="{Binding Load}" Margin="0,5,5,0" Width="100" Height="32" Content="Load"></Button>
-            <Button Command="{Binding Run}" Margin="0,5,5,0" Width="100" Height="32" Content="Run"></Button>
+            <Button Command="{Binding Load}" Margin="0,0,2,0" Width="100" Height="32" Content="Load"></Button>
+            <Button Command="{Binding Run}" Margin="0,0,2,0" Width="100" Height="32" Content="Run"></Button>
         </StackPanel>
     </Grid>
 </Window>
